update office hour

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ title: Home
 		</tr>
 		<tr>
 			<td rowspan=3><strong>Wednesday</strong></td>
-			<td>9:00am &dash; 10:30am</td>
+			<td>10:00am &dash; 11:30am</td>
 			<td>Nikhil</td>
-			<td>CS Labs</td>
+			<td><a href="https://usfca.zoom.us/j/83747920217">Online via Zoom</a></td>
 		</tr>
 		<tr>
 			<td>1:00pm &dash; 3:00pm</td>
