adding threads notes

--- a/schedule.html
+++ b/schedule.html
@@ -67,10 +67,11 @@ title: Schedule
 		<tr>
 			<td>3<br/>9/7-9/9</td>
 			<td>
-				<i>Census date is 9/10.</i>
-			</td>
-			<td>
-				<!-- <a href="https://usfca.instructure.com/courses/1601365/pages/intellij-and-github">IntelliJ/Github Video</a><br/> -->
+				<i>Census date is 9/10.</i><br/>
+				<a href="https://github.com/CS601-F21/code-examples/tree/main/DesignPatternsPartial">Design Patterns Code Example</a><br/>
+				<a href="https://github.com/CS601-F21/notes/blob/main/lectures/threads.md">Threads notes</a><br/>
+		</td>
+			<td>	
 			</td>
 			<td>
 			</td>
