--- a/schedule.html
+++ b/schedule.html
@@ -71,7 +71,8 @@ title: Schedule
 				<a href="https://github.com/CS601-F21/code-examples/tree/main/DesignPatterns">Design Patterns Code Example</a><br/>
 				<a href="https://github.com/CS601-F21/notes/blob/main/lectures/threads.md">Threads notes</a><br/>
 		</td>
-			<td>	
+			<td>
+				<a href="https://usfca.instructure.com/courses/1601365/pages/class-recording-section-02-09-slash-07">Section 02 Class Recording/a><br/>
 			</td>
 			<td>
 			</td>
