adding class recording

--- a/schedule.html
+++ b/schedule.html
@@ -72,7 +72,7 @@ title: Schedule
 				<a href="https://github.com/CS601-F21/notes/blob/main/lectures/threads.md">Threads notes</a><br/>
 		</td>
 			<td>
-				<a href="https://usfca.instructure.com/courses/1601365/pages/class-recording-section-02-09-slash-07">Section 02 Class Recording/a><br/>
+				<a href="https://usfca.instructure.com/courses/1601365/pages/class-recording-section-02-09-slash-07">Section 02 Class Recording 09/07</a><br/>
 			</td>
 			<td>
 			</td>
