add link to interactive grading guide

--- a/schedule.html
+++ b/schedule.html
@@ -91,6 +91,7 @@ title: Schedule
 			</td>
 			<td>
 				<strong>Due Thursday - 9:55am</strong> - <a href="https://github.com/CS601-F21/Project1/blob/main/README.md">Project 1</a><br/>
+				<a href="https://github.com/CS601-F21/notes/blob/main/admin/p1grading.md">Interactive Grading Guide</a><br/>
 			</td>
 		</tr>
 
