--- a/schedule.html
+++ b/schedule.html
@@ -83,7 +83,10 @@ title: Schedule
 		<tr>
 			<td>4<br/>9/14-9/16</td>
 			<td>
-			</td>
+				<a href="https://github.com/CS601-F21/notes/blob/main/lectures/threads.md">Threads notes</a><br/>
+				<a href="https://github.com/CS601-F21/code-examples/tree/main/Threads">Threads sample code</a><br/>
+				<a href="https://github.com/CS601-F21/notes/blob/main/admin/p1grading.md">Interactive Grading Guide</a><br/>
+				<a href="https://docs.google.com/spreadsheets/d/1HEeoM4rsrxLEHzF2zgc6CCiJgfI2Yk_hAxheWdKhdh8/edit?usp=sharing">Interactive Grading Signup</a><br/>
 			<td>
 				<!-- <a href="https://usfca.instructure.com/courses/1601365/pages/intellij-and-github">IntelliJ/Github Video</a><br/> -->
 			</td>
