post project 2 description

--- a/assignments.html
+++ b/assignments.html
@@ -35,8 +35,8 @@ title: Assignments
      <tr>
        <td>2</td>
        <td>
-<!--         <a href="https://github.com/CS601-F21/projects/blob/master/project2.md">Project 2 - Concurrency</a><br/>
- -->        <font color="grey">Project 2 - Concurrency</font><br/>
+        <a href="https://github.com/CS601-F21/Project2">Project 2 - Concurrency</a><br/>
+ <!--        <font color="grey">Project 2 - Concurrency</font><br/> -->
       </td>
       <td>Thursday, October 7, 2021 - 9:55am</td>
     </tr>
