--- a/schedule.html
+++ b/schedule.html
@@ -116,7 +116,7 @@ title: Schedule
 			<td>
 			</td>
 			<td>
-				<strong>Due Thursday - 9:55am</strong> - <font color="grey">Project 2</font><br/>
+				<strong>Due Thursday - 9:55am</strong> - <a href="https://github.com/CS601-F21/Project2">Project 2</a><br/>
 
 			</td>
 		</tr>
