adding networking content

--- a/schedule.html
+++ b/schedule.html
@@ -92,10 +92,15 @@ title: Schedule
 		<tr>
 			<td>5<br/>9/21-9/23</td>
 			<td>
+				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/networking.md">Computer Networking notes</a><br/>
+				<a href="https://github.com/CS601-F21/code-examples/tree/main/Sockets">Sockets sample code</a><br/>
 			</td>
 			<td>
+				<a href="https://github.com/CS601-F21/notes/blob/main/admin/p1resubmit.md">Project 1 Resubmission Guide</a><br/>
+				<a href="https://github.com/CS601-F21/notes/blob/main/admin/extracredit.md">Extra Credit opportunities</a><br/>
 			</td>
 			<td>
+				<font color="grey">Due Friday - Project 1 Code Reviews</font>				
 			</td>
 		</tr>
 
@@ -106,6 +111,7 @@ title: Schedule
 			<td>
 			</td>
 			<td>
+				<font color="grey">Due Saturday - Project 1 Resubmission Pull Request</font>
 			</td>
 		</tr>
 
