--- a/schedule.html
+++ b/schedule.html
@@ -98,6 +98,8 @@ title: Schedule
 			<td>
 				<a href="https://github.com/CS601-F21/notes/blob/main/admin/p1resubmit.md">Project 1 Resubmission Guide</a><br/>
 				<a href="https://github.com/CS601-F21/notes/blob/main/admin/extracredit.md">Extra Credit opportunities</a><br/>
+				<hr/>
+				<a href="https://usfca.instructure.com/courses/1601365/pages/class-recording-section-02-09-slash-23">Section 02 Class Recording 09/23</a><br/>				
 			</td>
 			<td>
 				<font color="grey">Due Friday - Project 1 Code Reviews</font>				
