schedule for week of 9/28

--- a/schedule.html
+++ b/schedule.html
@@ -107,6 +107,8 @@ title: Schedule
 		<tr>
 			<td>6<br/>9/28-9/30</td>
 			<td>
+				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/networking.md">Computer Networking notes</a><br/>
+				<a href="https://github.com/CS601-F21/code-examples/tree/main/Sockets">Sockets sample code</a><br/>
 			</td>
 			<td>
 			</td>
