add notes on testing

--- a/schedule.html
+++ b/schedule.html
@@ -111,6 +111,7 @@ title: Schedule
 			<td>
 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/networking.md">Computer Networking notes</a><br/>
 				<a href="https://github.com/CS601-F21/code-examples/tree/main/Sockets">Sockets sample code</a><br/>
+				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/testing.md">Testing</a><br/>
 			</td>
 			<td>
 			</td>
