adding exam and p2 guides

--- a/schedule.html
+++ b/schedule.html
@@ -123,8 +123,12 @@ title: Schedule
 		<tr>
 			<td>7<br/>10/5-10/7</td>
 			<td>
+				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/testing.md">Testing</a><br/>
+				<strong><span class="text-primary">10/7 - Project 2 Interactive Grading</span></strong><br/>
 			</td>
 			<td>
+				<a href="https://github.com/CS601-F21/notes/blob/main/admin/p2grading.md">Interactive Grading Guide</a><br/>
+				<a href="https://github.com/CS601-F21/notes/blob/main/admin/exam1.md">Exam 1 Guide</a><br/>
 			</td>
 			<td>
 				<strong>Due Thursday - 9:55am</strong> - <a href="https://github.com/CS601-F21/Project2">Project 2</a><br/>
@@ -135,7 +139,8 @@ title: Schedule
 		<tr>
 			<td>8<br/>10/12-10/14</td>
 			<td>
-				<strong><span class="text-primary">10/12 - Exam 1</span></strong><br/>
+				<strong><span class="text-primary">10/12 - Exam 1</span></strong><br/>	
+				<a href="https://github.com/CS601-F21/notes/blob/main/admin/exam1.md">Exam 1 Guide</a><br/>			
 			</td>
 			<td>
 			</td>
