--- a/assignments.html
+++ b/assignments.html
@@ -43,8 +43,7 @@ title: Assignments
      <tr>
        <td>3</td>
        <td>
-<!--         <a href="https://github.com/CS601-F21/projects/blob/master/project3.md">Project 3 - HTTP/Sockets</a><br/>
- -->        <font color="grey">Project 3 - HTTP/Sockets</font><br/>
+        <a href="https://github.com/CS601-F21/Project3">Project 3 - HTTP/Sockets</a><br/>
       </td>
       <td>Thursday, November 4, 2021 - 9:55am</td>
     </tr>
