--- a/schedule.html
+++ b/schedule.html
@@ -173,7 +173,7 @@ title: Schedule
 			<td>
 			</td>
 			<td>
-				<strong>Due Thursday - 9:55am</strong> - <font color="grey">Project 3</font><br/>				
+				<strong>Due Thursday - 9:55am</strong> - <a href="https://github.com/CS601-F21/Project3">Project 3</a><br/>				
 			</td>
 		</tr>
 		<tr>
