add testing links

--- a/schedule.html
+++ b/schedule.html
@@ -140,9 +140,12 @@ title: Schedule
 			<td>8<br/>10/12-10/14</td>
 			<td>
 				<strong><span class="text-primary">10/12 - Exam 1</span></strong><br/>	
-				<a href="https://github.com/CS601-F21/notes/blob/main/admin/exam1.md">Exam 1 Guide</a><br/>			
+				<a href="https://github.com/CS601-F21/notes/blob/main/admin/exam1.md">Exam 1 Guide</a><br/>	
+				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/testing.md">Testing</a><br/>
+				<a href="https://github.com/CS601-F21/code-examples/tree/main/Testing">Testing/JUnit</a><br/>		
 			</td>
 			<td>
+				<a href="https://martinfowler.com/articles/mocksArentStubs.html">Fowler on Mocks and Stubs</a><br/>
 			</td>
 			<td>
 			</td>
