--- a/schedule.html
+++ b/schedule.html
@@ -154,6 +154,8 @@ title: Schedule
 			<td>9<br/>10/21</td>
 			<td>
 				<i>10/19 - Fall Break</i>
+				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/web.md">HTML, HTTP, and the Web</a><br/>
+				<a href="https://github.com/CS601-F21/code-examples/tree/main/Web">Web sample code</a><br/>
 			</td>
 			<td>
 			</td>
