--- a/schedule.html
+++ b/schedule.html
@@ -153,7 +153,7 @@ title: Schedule
 		<tr>
 			<td>9<br/>10/21</td>
 			<td>
-				<i>10/19 - Fall Break</i>
+				<i>10/19 - Fall Break</i><br/>
 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/web.md">HTML, HTTP, and the Web</a><br/>
 				<a href="https://github.com/CS601-F21/code-examples/tree/main/Web">Web sample code</a><br/>
 			</td>
