--- a/schedule.html
+++ b/schedule.html
@@ -165,8 +165,13 @@ title: Schedule
 		<tr>
 			<td>10<br/>10/26-10/28</td>
 			<td>
+				<a href="https://docs.google.com/presentation/d/1F7ro9_3Z3aYZXrXcZQrPoYboRZCuCREuuulJSPgd4Gk/edit?usp=sharing">Web APIs and Services</a><br/>
+				<a href="https://docs.google.com/presentation/d/1ArkXpjG91JpaxFh6Dskjspw7zKXsKFugq0PmJamDHkQ/edit?usp=sharing">Web Application Design</a><br/>
 			</td>
 			<td>
+				<a href="https://github.com/CS601-F21/notes/blob/main/lectures/slack.md">Accessing the Slack API</a><br/>
+				<a href="https://www.baeldung.com/cs/rest-architecture">Baeldung on REST Architecture</a><br/>
+				<a href="https://martinfowler.com/articles/microservices.html">Fowler on Microservices</a><br/>
 			</td>
 			<td>
 			</td>
@@ -228,7 +233,7 @@ title: Schedule
 			<td>
 			</td>
 			<td>
-				<strong>Due Thursday - 9:55am</strong> - <font color="grey">Project 4 Checkpoint</font><br/>					
+				<strong>Due Tuesday - 9:55am</strong> - <font color="grey">Project 4 Checkpoint</font><br/>					
 			</td>
 		</tr>
 		<tr>
