--- a/schedule.html
+++ b/schedule.html
@@ -178,9 +178,11 @@ title: Schedule
 		</tr>
 		<tr>
 			<td>11<br/>11/2-11/4</td>
-			<td>				
+			<td>	
+				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/databases.md">Persistent Storage</a><br/>			
 			</td>
 			<td>
+				<a href="Baeldung Intro to JDBC">https://www.baeldung.com/java-jdbc</a><br/>
 			</td>
 			<td>
 				<strong>Due Thursday - 9:55am</strong> - <a href="https://github.com/CS601-F21/Project3">Project 3</a><br/>				
