--- a/schedule.html
+++ b/schedule.html
@@ -182,7 +182,7 @@ title: Schedule
 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/databases.md">Persistent Storage</a><br/>			
 			</td>
 			<td>
-				<a href="Baeldung Intro to JDBC">https://www.baeldung.com/java-jdbc</a><br/>
+				<a href="https://www.baeldung.com/java-jdbc">Baeldung Intro to JDBC</a><br/>
 			</td>
 			<td>
 				<strong>Due Thursday - 9:55am</strong> - <a href="https://github.com/CS601-F21/Project3">Project 3</a><br/>				
