add link to guide for using the microcloud

--- a/schedule.html
+++ b/schedule.html
@@ -169,6 +169,7 @@ title: Schedule
 				<a href="https://docs.google.com/presentation/d/1ArkXpjG91JpaxFh6Dskjspw7zKXsKFugq0PmJamDHkQ/edit?usp=sharing">Web Application Design</a><br/>
 			</td>
 			<td>
+				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/usf_guides/microcloud.md">Using the Microcloud</a><br/>
 				<a href="https://github.com/CS601-F21/notes/blob/main/lectures/slack.md">Accessing the Slack API</a><br/>
 				<a href="https://www.baeldung.com/cs/rest-architecture">Baeldung on REST Architecture</a><br/>
 				<a href="https://martinfowler.com/articles/microservices.html">Fowler on Microservices</a><br/>
