--- a/schedule.html
+++ b/schedule.html
@@ -166,7 +166,7 @@ title: Schedule
 			<td>10<br/>10/26-10/28</td>
 			<td>
 				<a href="https://docs.google.com/presentation/d/1F7ro9_3Z3aYZXrXcZQrPoYboRZCuCREuuulJSPgd4Gk/edit?usp=sharing">Web APIs and Services</a><br/>
-				<a href="https://docs.google.com/presentation/d/1ArkXpjG91JpaxFh6Dskjspw7zKXsKFugq0PmJamDHkQ/edit?usp=sharing">Web Application Design</a><br/>
+				<a href="https://github.com/CS601-F21/code-examples/tree/main/JettyEchoServer">JettyEchoServer</a><br/>
 			</td>
 			<td>
 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/usf_guides/microcloud.md">Using the Microcloud</a><br/>
@@ -180,6 +180,8 @@ title: Schedule
 		<tr>
 			<td>11<br/>11/2-11/4</td>
 			<td>	
+				<a href="https://github.com/CS601-F21/code-examples/tree/main/JettyLoginServer">JettyLoginServer</a><br/>
+				<a href="https://docs.google.com/presentation/d/1ArkXpjG91JpaxFh6Dskjspw7zKXsKFugq0PmJamDHkQ/edit?usp=sharing">Web Application Design</a><br/>
 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/databases.md">Persistent Storage</a><br/>			
 			</td>
 			<td>
