update storage links

--- a/schedule.html
+++ b/schedule.html
@@ -194,8 +194,12 @@ title: Schedule
 		<tr>
 			<td>12<br/>11/9/-11/11</td>
 			<td>
+				<a href="https://github.com/CS601-F21/code-examples/tree/main/JDBC">JDBC sample code</a><br/>
+				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/databases.md">Persistent Storage</a><br/>			
 			</td>
 			<td>
+				<a href="https://www.baeldung.com/java-sql-connection-thread-safety">java.sql.Connection thread safety</a><br/>
+				<a href="https://www.baeldung.com/java-connection-pooling">Connection pooling</a><br/>
 			</td>
 			<td>
 			</td>
