adding microservices exercise"

--- a/schedule.html
+++ b/schedule.html
@@ -202,6 +202,7 @@ title: Schedule
 				<a href="https://www.baeldung.com/java-connection-pooling">Connection pooling</a><br/>
 			</td>
 			<td>
+				<strong>Due Thursday - 9:55am</strong> - <a href="https://usfca.instructure.com/courses/1601365/quizzes/2393707">Microservices Videos/Questions</a><br/>
 			</td>
 		</tr>
 		<tr>
