--- a/assignments.html
+++ b/assignments.html
@@ -51,7 +51,7 @@ title: Assignments
        <td>4</td>
        <td>
 <!--         <a href="https://github.com/CS601-F21/projects/blob/master/project4.md">Project 4 - Web Application or Service</a><br/>
- -->        <font color="grey">Project 4 - Web Application or Service</font><br/>
+ -->        <a href="https://github.com/CS601-F21/Project4/blob/main/README.md">Project 4 - Web Application</a><br/>
       </td>
       <td>Demonstration During Finals Week</td>
     </tr>
