--- a/schedule.html
+++ b/schedule.html
@@ -243,13 +243,13 @@ title: Schedule
 			<td>
 			</td>
 			<td>
-				<strong>Due Tuesday - 9:55am</strong> - <font color="grey">Project 4 Checkpoint</font><br/>					
+				<strong>Due Tuesday - 9:55am</strong> - <a href="https://github.com/CS601-F21/Project4/blob/main/README.md">Project 4 Checkpoint</a><br/>					
 			</td>
 		</tr>
 		<tr>
 			<td>Finals Week<br/>12/10-12/16</td>
 			<td>
-				<span class="text-primary">Project 4 Final Demonstrations</span>
+				<span class="text-primary"><a href="https://github.com/CS601-F21/Project4/blob/main/README.md">Project 4 Final Demonstrations</a></span>
 			</td>
 			<td>
 			</td>
