--- a/assignments.html
+++ b/assignments.html
@@ -53,7 +53,7 @@ title: Assignments
 <!--         <a href="https://github.com/CS601-F21/projects/blob/master/project4.md">Project 4 - Web Application or Service</a><br/>
  -->        <a href="https://github.com/CS601-F21/Project4/blob/main/README.md">Project 4 - Web Application</a><br/>
       </td>
-      <td>Demonstration During Finals Week</td>
+      <td>Checkpoint Tuesday, December 7, 2021<br/>Final Submission Sunday, December 12, 2021<br/>Interactive Grading by Thursday, December 16, 2021</td>
     </tr>
      <tr>
        <td>Side Project</td>
