adding content for week of 11/16

--- a/schedule.html
+++ b/schedule.html
@@ -200,6 +200,8 @@ title: Schedule
 			<td>
 				<a href="https://www.baeldung.com/java-sql-connection-thread-safety">java.sql.Connection thread safety</a><br/>
 				<a href="https://www.baeldung.com/java-connection-pooling">Connection pooling</a><br/>
+				<a href="https://www.infoq.com/presentations/github-rails-monolith-microservices/">From Monolith to Microservices</a><br/>
+				<a href="https://www.infoq.com/presentations/microservices-arch-infrastructure-cd/">Design Microservice Architectures the Right Way</a><br/>
 			</td>
 			<td>
 				<strong>Due Thursday - 9:55am</strong> - <a href="https://usfca.instructure.com/courses/1601365/quizzes/2393707">Microservices Videos/Questions</a><br/>
@@ -208,6 +210,8 @@ title: Schedule
 		<tr>
 			<td>13<br/>11/16-11/18</td>
 			<td>
+				<a href="https://usfca.instructure.com/courses/1601365/quizzes/2393837">SQL and Microservices Exercises (available 11/16 9:55am)</a><br/>
+				<a href="https://github.com/CS601-F21/code-examples/tree/main/Mocks">Testing with Mockito Example</a><br/>
 			</td>
 			<td>
 			</td>
