adding link to exam 2 guide

--- a/schedule.html
+++ b/schedule.html
@@ -192,7 +192,7 @@ title: Schedule
 			</td>
 		</tr>
 		<tr>
-			<td>12<br/>11/9/-11/11</td>
+			<td>12<br/>11/9-11/11</td>
 			<td>
 				<a href="https://github.com/CS601-F21/code-examples/tree/main/JDBC">JDBC sample code</a><br/>
 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/databases.md">Persistent Storage</a><br/>			
@@ -214,6 +214,7 @@ title: Schedule
 				<a href="https://github.com/CS601-F21/code-examples/tree/main/Mocks">Testing with Mockito Example</a><br/>
 			</td>
 			<td>
+				<a href="https://github.com/CS601-F21/notes/blob/main/admin/exam2.md">Exam 2 Guide</a><br/>
 			</td>
 			<td>
 			</td>
@@ -222,6 +223,8 @@ title: Schedule
 			<td>14<br/>11/23</td>
 			<td>
 				<i>11/25 - Thanksgiving holiday</i>
+				11/23 - Exam review day<br/>
+				<a href="https://github.com/CS601-F21/notes/blob/main/admin/exam2.md">Exam 2 Guide</a><br/>				
 			</td>
 			<td>
 			</td>
