adding link to exam 2 guide

--- a/schedule.html
+++ b/schedule.html
@@ -222,7 +222,7 @@ title: Schedule
 		<tr>
 			<td>14<br/>11/23</td>
 			<td>
-				<i>11/25 - Thanksgiving holiday</i>
+				<i>11/25 - Thanksgiving holiday</i><br/>
 				11/23 - Exam review day<br/>
 				<a href="https://github.com/CS601-F21/notes/blob/main/admin/exam2.md">Exam 2 Guide</a><br/>				
 			</td>
